// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button - native should match snapshot diff 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -16,11 +16,11 @@
    <View
      style={
        Array [
          undefined,
          Object {
-           \\"width\\": undefined,
+           \\"width\\": 200,
          },
        ]
      }
    >
      <View
@@ -33,40 +33,134 @@
              \\"justifyContent\\": \\"center\\",
              \\"paddingVertical\\": 11,
            },
            false,
            Object {
-             \\"backgroundColor\\": \\"#00a991\\",
+             \\"backgroundColor\\": \\"#e0f6ff\\",
            },
            Object {
-             \\"justifyContent\\": \\"center\\",
+             \\"justifyContent\\": \\"space-between\\",
            },
            false,
            Object {
              \\"height\\": 44,
-             \\"paddingEnd\\": 16,
-             \\"paddingStart\\": 16,
+             \\"paddingEnd\\": 12,
+             \\"paddingStart\\": 12,
            },
          ]
        }
      >
        <View
          style={
            Object {
              \\"alignItems\\": \\"center\\",
              \\"flexDirection\\": \\"row\\",
+           }
+         }
+       >
+         <View
+           style={
+             Object {
+               \\"marginEnd\\": 8,
              }
            }
          >
+           <Text
+             style={
+               Array [
+                 Object {
+                   \\"fontFamily\\": \\"orbit-icons\\",
+                 },
+                 Object {
+                   \\"fontSize\\": 24,
+                   \\"height\\": 24,
+                   \\"lineHeight\\": 24,
+                   \\"width\\": 24,
+                 },
+                 Object {
+                   \\"color\\": \\"#0176D2\\",
+                 },
+                 undefined,
+               ]
+             }
+           >
+             f
+           </Text>
+         </View>
          Button text
        </View>
        <View
          style={
            Object {
              \\"alignItems\\": \\"center\\",
              \\"flexDirection\\": \\"row\\",
            }
          }
-       />
+       >
+         <View
+           style={
+             Object {
+               \\"alignItems\\": \\"center\\",
+               \\"flexDirection\\": \\"row\\",
+             }
+           }
+         >
+           <Text
+             style={
+               Array [
+                 Object {
+                   \\"margin\\": 0,
+                 },
+                 Array [
+                   Object {},
+                   Object {
+                     \\"fontSize\\": 14,
+                     \\"fontWeight\\": \\"normal\\",
+                     \\"lineHeight\\": 18,
+                   },
+                   Object {
+                     \\"color\\": \\"#0176D2\\",
+                   },
+                   undefined,
+                 ],
+                 Object {
+                   \\"fontFamily\\": \\"Roboto\\",
+                 },
+               ]
+             }
+           >
+             Button sublabel
+           </Text>
+         </View>
+         <View
+           style={
+             Object {
+               \\"marginStart\\": 8,
+             }
+           }
+         >
+           <Text
+             style={
+               Array [
+                 Object {
+                   \\"fontFamily\\": \\"orbit-icons\\",
+                 },
+                 Object {
+                   \\"fontSize\\": 24,
+                   \\"height\\": 24,
+                   \\"lineHeight\\": 24,
+                   \\"width\\": 24,
+                 },
+                 Object {
+                   \\"color\\": \\"#0176D2\\",
+                 },
+                 undefined,
+               ]
+             }
+           >
+             
+           </Text>
+         </View>
+       </View>
      </View>
    </View>
  </View>"
`;

exports[`Button - native should match the snapshot 1`] = `
<Button
  disabled={false}
  onPress={
    [MockFunction] {
      "calls": Array [
        Array [
          undefined,
        ],
        Array [
          undefined,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
  width={200}
>
  <ButtonInner
    circled={false}
    disabled={false}
    leftIcon={
      <Icon
        name="calendar"
      />
    }
    rightIcon={
      <Icon
        name="chevron-right"
      />
    }
    size="normal"
    sublabel="Button sublabel"
    type="info"
  >
    Button text
  </ButtonInner>
</Button>
`;

exports[`Button - web should match snapshot diff 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,21 +1,19 @@
- <button
-   disabled={false}
-   onClick={[Function mockConstructor]}
+ <a
+   href=\\"https://lolilol.com\\"
    style={
      Object {
        \\"backgroundColor\\": \\"transparent\\",
        \\"border\\": 0,
        \\"cursor\\": \\"pointer\\",
        \\"display\\": \\"inline-block\\",
        \\"padding\\": 0,
        \\"pointerEvents\\": \\"auto\\",
        \\"textDecoration\\": \\"none\\",
-       \\"width\\": \\"inherit\\",
+       \\"width\\": 200,
      }
    }
-   type=\\"button\\"
  >
    <View
      style={
        Array [
          Object {
@@ -25,39 +23,98 @@
            \\"justifyContent\\": \\"center\\",
            \\"paddingVertical\\": 11,
          },
          false,
          Object {
-           \\"backgroundColor\\": \\"#00a991\\",
+           \\"backgroundColor\\": \\"#e0f6ff\\",
          },
          Object {
-           \\"justifyContent\\": \\"center\\",
+           \\"justifyContent\\": \\"space-between\\",
          },
-         undefined,
+         false,
          Object {
            \\"height\\": 44,
-           \\"paddingEnd\\": 16,
-           \\"paddingStart\\": 16,
+           \\"paddingEnd\\": 12,
+           \\"paddingStart\\": 12,
          },
        ]
      }
    >
      <View
        style={
          Object {
            \\"alignItems\\": \\"center\\",
            \\"flexDirection\\": \\"row\\",
+         }
+       }
+     >
+       <View
+         style={
+           Object {
+             \\"marginEnd\\": 8,
            }
          }
        >
+         <Text
+           style={
+             Array [
+               Object {
+                 \\"fontFamily\\": \\"orbit-icons\\",
+               },
+               Object {
+                 \\"fontSize\\": 24,
+                 \\"height\\": 24,
+                 \\"lineHeight\\": 24,
+                 \\"width\\": 24,
+               },
+               Object {
+                 \\"color\\": \\"#0176D2\\",
+               },
+               undefined,
+             ]
+           }
+         >
+           f
+         </Text>
+       </View>
        Button text
      </View>
      <View
        style={
          Object {
            \\"alignItems\\": \\"center\\",
            \\"flexDirection\\": \\"row\\",
          }
        }
-     />
+     >
+       <View
+         style={
+           Object {
+             \\"marginStart\\": 8,
+           }
+         }
+       >
+         <Text
+           style={
+             Array [
+               Object {
+                 \\"fontFamily\\": \\"orbit-icons\\",
+               },
+               Object {
+                 \\"fontSize\\": 24,
+                 \\"height\\": 24,
+                 \\"lineHeight\\": 24,
+                 \\"width\\": 24,
+               },
+               Object {
+                 \\"color\\": \\"#0176D2\\",
+               },
+               undefined,
+             ]
+           }
+         >
+           
+         </Text>
        </View>
- </button>
+     </View>
+   </View>
+ </a>"
`;

exports[`Button - web should match the snapshot 1`] = `
<a
  href="https://lolilol.com"
  style={
    Object {
      "backgroundColor": "transparent",
      "border": 0,
      "cursor": "pointer",
      "display": "inline-block",
      "padding": 0,
      "pointerEvents": "auto",
      "textDecoration": "none",
      "width": 200,
    }
  }
>
  <ButtonInner
    circled={false}
    disabled={false}
    leftIcon={
      <Icon
        name="calendar"
      />
    }
    rightIcon={
      <Icon
        name="chevron-right"
      />
    }
    size="normal"
    type="info"
  >
    Button text
  </ButtonInner>
</a>
`;
